syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.unla.chefencasagrpc.grpc";

service usuario{
    rpc crearUsuario(UsuarioRequest) returns (ResponseUsuario);
}

message UsuarioRequest{
    string nombre = 1;
    string email = 2;
    string usuario = 3;
    string password = 4;
}

message ResponseUsuario{
    string message = 1;
}